changed to use URL directly in ErrorSummary
git-svn-id: https://opencadc.googlecode.com/svn/trunk@109 728ff76a-78ac-11de-a72b-d90af8dea425